REGRESSION (251792@main?): [ macOS ][ iOS ] TestWebKitAPI.WKBackForwardList.BackForwardNavigationDoesNotSkipItemsWithUserGesture is a flaky failure and crash https://bugs.webkit.org/show_bug.cgi?id=241991 <rdar://95886849>

Reviewed by Alex Christensen.

The API test relies on `[webView _test_waitForDidFinishNavigationOrSameDocumentNavigation]` to proceed
to the next steps instead of the usual `[webView _test_waitForDidFinishNavigation]` because
didFinishNavigation does not get called for same document navigations (e.g. back navigation after
history.pushState()).

However, what I didn't realize is that when doing a back navigation after a pushState(),
didSameDocumentNavigation would get called twice, once with _WKSameDocumentNavigationTypeAnchorNavigation
and then again with _WKSameDocumentNavigationTypeSessionStatePop. These duplicate calls would cause the
test to proceed further too eagerly.

To address the issue, these API tests now rely on their own custom navigation delegate which only marks
the navigation as complete if didSameDocumentNavigation gets called with either
_WKSameDocumentNavigationTypeSessionStatePush or _WKSameDocumentNavigationTypeSessionStatePop.

* Tools/TestWebKitAPI/Tests/WebKit/WKBackForwardList.mm:
(-[WKBackForwardNavigationDelegate init]):
(-[WKBackForwardNavigationDelegate webView:didFinishNavigation:]):
(-[WKBackForwardNavigationDelegate _webView:navigation:didSameDocumentNavigation:]):
(TEST):
* Tools/TestWebKitAPI/cocoa/TestNavigationDelegate.h:
* Tools/TestWebKitAPI/cocoa/TestNavigationDelegate.mm:
(-[TestNavigationDelegate _webView:navigation:didSameDocumentNavigation:]): Deleted.
(-[TestNavigationDelegate waitForDidFinishNavigationOrSameDocumentNavigation]): Deleted.
(-[WKWebView _test_waitForDidFinishNavigationOrSameDocumentNavigation]): Deleted.

Canonical link: https://commits.webkit.org/251894@main