Tools/TestWebKitAPI/cocoa/TestNavigationDelegate.mm
@@ -98,12 +98,6 @@
         completionHandler(NSURLSessionAuthChallengePerformDefaultHandling, nil);
 }
 
-- (void)_webView:(WKWebView *)webView navigation:(WKNavigation *)navigation didSameDocumentNavigation:(_WKSameDocumentNavigationType)navigationType
-{
-    if (_didSameDocumentNavigation)
-        _didSameDocumentNavigation(webView, navigation);
-}
-
 - (void)waitForDidStartProvisionalNavigation
 {
     EXPECT_FALSE(self.didStartProvisionalNavigation);
@@ -130,25 +124,6 @@
     TestWebKitAPI::Util::run(&finished);
 
     self.didFinishNavigation = nil;
-}
-
-- (void)waitForDidFinishNavigationOrSameDocumentNavigation
-{
-    EXPECT_FALSE(self.didFinishNavigation);
-    EXPECT_FALSE(self.didSameDocumentNavigation);
-
-    __block bool finished = false;
-    self.didFinishNavigation = ^(WKWebView *, WKNavigation *) {
-        finished = true;
-    };
-    self.didSameDocumentNavigation = ^(WKWebView *, WKNavigation *) {
-        finished = true;
-    };
-
-    TestWebKitAPI::Util::run(&finished);
-
-    self.didFinishNavigation = nil;
-    self.didSameDocumentNavigation = nil;
 }
 
 - (void)waitForWebContentProcessDidTerminate
@@ -265,17 +240,6 @@
     }];
     TestWebKitAPI::Util::run(&presentationUpdateHappened);
 #endif
-}
-
-- (void)_test_waitForDidFinishNavigationOrSameDocumentNavigation
-{
-    EXPECT_FALSE(self.navigationDelegate);
-
-    auto navigationDelegate = adoptNS([[TestNavigationDelegate alloc] init]);
-    self.navigationDelegate = navigationDelegate.get();
-    [navigationDelegate waitForDidFinishNavigationOrSameDocumentNavigation];
-
-    self.navigationDelegate = nil;
 }
 
 - (void)_test_waitForWebContentProcessDidTerminate
